force-app/main/default/objects/Audit_Log__c/Audit_Log__c.object-meta.xml
<CustomObject>
    <description>used for reporting on record/field changes</description>
    <label>Audit Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>