force-app/main/default/objects/Audit_Log__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Audit Logs</relationshipLabel>
    <relationshipName>Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>