force-app/main/default/objects/Audit_Log__c/fields/Telereach_Id__c.field-meta.xml
<CustomField>
    <fullName>Telereach_Id__c</fullName>
    <description>If there&apos;s a contact on the record, show the contact ID. If there&apos;s no contact and a lead, show the lead ID.</description>
    <formula>IF(NOT(ISBLANK(Contact__c)),Contact__c,IF(NOT(ISBLANK(Lead__c)),Lead__c,&apos;&apos;))</formula>
    <label>Telereach Id</label>
    <type>Text</type>
</CustomField>