force-app/main/default/objects/Audit_Log__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Message__c</columns>
    <columns>Description__c</columns>
    <columns>Type__c</columns>
    <columns>Telereach_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>Created Today</label>
</ListView>