force-app/main/default/objects/Audit_Log__c/listViews/Look_for_1_Lead.listView-meta.xml
<ListView>
    <fullName>Look_for_1_Lead</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Message__c</columns>
    <columns>Description__c</columns>
    <columns>Type__c</columns>
    <columns>Telereach_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
        <value>Sue Peterson</value>
    </filters>
    <label>Look for 1 Lead</label>
</ListView>